// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCardForm component should renders correctly with address dropdown 1`] = `
<form
  className=""
  name="addEditCreditCard"
  noValidate={true}
>
  <Styled(CreditCardFields)
    addressLabels={Object {}}
    addressList={
      Immutable.List [
        Object {
          "addressId": "12345",
          "firstName": "test",
          "lastName": "test",
          "primary": "true",
        },
      ]
    }
    cardNumbProps={
      Object {
        "colSize": Object {
          "large": 6,
          "medium": 8,
          "small": 6,
        },
      }
    }
    cardNumberInnerProps={
      Object {
        "colSize": Object {
          "large": 12,
          "medium": 4,
          "small": 6,
        },
      }
    }
    cardNumberWrapper={true}
    className=""
    creditFieldLabels={
      Object {
        "creditCardNumber": "lbl_payment_cardNumber",
        "expMonth": "lbl_payment_expMonth",
        "expYear": "lbl_payment_expYear",
      }
    }
    expMonthProps={
      Object {
        "colSize": Object {
          "large": 3,
          "medium": 2,
          "small": 6,
        },
      }
    }
    expYearProps={
      Object {
        "colSize": Object {
          "large": 3,
          "medium": 2,
          "small": 6,
        },
      }
    }
    initialValues={Object {}}
    isEdit={false}
    labels={
      Object {
        "common": Object {},
        "paymentGC": Object {},
        "profile": Object {},
      }
    }
    mailingAddress={false}
    onFileAddressKey="12345"
    showCreditCardFields={true}
    showCvv={false}
    showUserName={true}
    subHeading={null}
  />
  <Styled(Heading)
    className="addressDropdownHeading"
    color="text.primary"
    component="h3"
    dataLocator="payment-bilingaddresslabel"
    textAlign="left"
    variant="listMenu"
  >
    lbl_payment_billingAddress
  </Styled(Heading)>
  <Styled(Row)
    className="elem-mb-XL"
    fullBleed={true}
  >
    <Styled(Col)
      className="creditCardForm__addressBook"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <Field
        component={[Function]}
        dataLocator="payment-billingaddressdd"
        id="onFileAddressKey"
        name="onFileAddressKey"
        options={
          Immutable.List [
            Object {
              "content": <Address
                address={
                  Object {
                    "addressId": "12345",
                    "firstName": "test",
                    "lastName": "test",
                    "primary": "true",
                  }
                }
                className=""
                dataLocatorPrefix=""
                fontWeight="regular"
                isDefault={true}
                showCountry={false}
                showDefault={true}
                showName={true}
                showPhone={false}
              />,
              "title": "test test (Default)",
              "value": "12345",
            },
            Object {
              "content": <ForwardRef
                buttonVariation="variable-width"
                fill="BLUE"
                fullWidth={true}
              >
                lbl_payment_addNewAddCta
              </ForwardRef>,
              "title": "lbl_payment_addNewAddCta",
              "value": "",
            },
          ]
        }
        selectListTitle="lbl_payment_ccAdressSelect"
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <Address
        address={
          Object {
            "addressId": "12345",
            "firstName": "test",
            "lastName": "test",
            "primary": "true",
          }
        }
        className="CreditCardForm__address"
        dataLocatorPrefix="payment"
        fontWeight="regular"
        isDefault={false}
        showCountry={false}
        showDefault={true}
        showName={true}
        showPhone={false}
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    className="CreditCardForm__ctaContainer"
    fullBleed={true}
  >
    <Styled(Col)
      className="CreditCardForm__cancel"
      colSize={
        Object {
          "large": 3,
          "medium": 3,
          "small": 4,
        }
      }
      offsetLeft={
        Object {
          "large": 6,
          "medium": 1,
          "small": 1,
        }
      }
    >
      <Styled(Button)
        buttonVariation="fixed-width"
        data-locator="payment-cancelbtn"
        type="button"
      >
        lbl_common_cancelCTA
      </Styled(Button)>
    </Styled(Col)>
    <Styled(Col)
      className="CreditCardForm__submit"
      colSize={
        Object {
          "large": 3,
          "medium": 3,
          "small": 4,
        }
      }
      offsetLeft={
        Object {
          "small": 1,
        }
      }
    >
      <Styled(Button)
        buttonVariation="fixed-width"
        data-locator="payment-addcardbtn"
        fill="BLUE"
        type="submit"
      >
        lbl_common_addCTA
      </Styled(Button)>
    </Styled(Col)>
  </Styled(Row)>
</form>
`;

exports[`CreditCardForm component should renders correctly with addressForm 1`] = `
<form
  className=""
  name="addEditCreditCard"
  noValidate={true}
>
  <Styled(CreditCardFields)
    addressLabels={Object {}}
    addressList={
      Immutable.List [
        Object {
          "addressId": "12345",
          "firstName": "test",
          "lastName": "test",
          "primary": "true",
        },
      ]
    }
    cardNumbProps={
      Object {
        "colSize": Object {
          "large": 6,
          "medium": 8,
          "small": 6,
        },
      }
    }
    cardNumberInnerProps={
      Object {
        "colSize": Object {
          "large": 12,
          "medium": 4,
          "small": 6,
        },
      }
    }
    cardNumberWrapper={true}
    className=""
    creditFieldLabels={
      Object {
        "creditCardNumber": "lbl_payment_cardNumber",
        "expMonth": "lbl_payment_expMonth",
        "expYear": "lbl_payment_expYear",
      }
    }
    expMonthProps={
      Object {
        "colSize": Object {
          "large": 3,
          "medium": 2,
          "small": 6,
        },
      }
    }
    expYearProps={
      Object {
        "colSize": Object {
          "large": 3,
          "medium": 2,
          "small": 6,
        },
      }
    }
    initialValues={Object {}}
    isEdit={false}
    labels={
      Object {
        "common": Object {},
        "paymentGC": Object {},
        "profile": Object {},
      }
    }
    mailingAddress={false}
    onFileAddressKey=""
    pristine={true}
    showCreditCardFields={true}
    showCvv={false}
    showUserName={true}
    subHeading={null}
  />
  <Styled(Heading)
    className="addressDropdownHeading"
    color="text.primary"
    component="h3"
    dataLocator="payment-bilingaddresslabel"
    textAlign="left"
    variant="listMenu"
  >
    lbl_payment_billingAddress
  </Styled(Heading)>
  <Styled(Row)
    className="elem-mb-XL"
    fullBleed={true}
  >
    <Styled(Col)
      className="creditCardForm__addressBook"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <Field
        component={[Function]}
        dataLocator="payment-billingaddressdd"
        id="onFileAddressKey"
        name="onFileAddressKey"
        options={
          Immutable.List [
            Object {
              "content": <Address
                address={
                  Object {
                    "addressId": "12345",
                    "firstName": "test",
                    "lastName": "test",
                    "primary": "true",
                  }
                }
                className=""
                dataLocatorPrefix=""
                fontWeight="regular"
                isDefault={true}
                showCountry={false}
                showDefault={true}
                showName={true}
                showPhone={false}
              />,
              "title": "test test (Default)",
              "value": "12345",
            },
            Object {
              "content": <ForwardRef
                buttonVariation="variable-width"
                fill="BLUE"
                fullWidth={true}
              >
                lbl_payment_addNewAddCta
              </ForwardRef>,
              "title": "lbl_payment_addNewAddCta",
              "value": "",
            },
          ]
        }
        selectListTitle="lbl_payment_ccAdressSelect"
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
    />
  </Styled(Row)>
  <div
    className="elem-mb-XL"
  >
    <FormSection
      name="address"
    >
      <Styled(AddressFields)
        formName="addEditCreditCard"
        formSection="address"
        labels={Object {}}
        showDefaultCheckbox={false}
        showPhoneNumber={false}
        showUserName={true}
      />
    </FormSection>
  </div>
  <Styled(Row)
    className="CreditCardForm__ctaContainer"
    fullBleed={true}
  >
    <Styled(Col)
      className="CreditCardForm__cancel"
      colSize={
        Object {
          "large": 3,
          "medium": 3,
          "small": 4,
        }
      }
      offsetLeft={
        Object {
          "large": 6,
          "medium": 1,
          "small": 1,
        }
      }
    >
      <Styled(Button)
        buttonVariation="fixed-width"
        data-locator="payment-cancelbtn"
        type="button"
      >
        lbl_common_cancelCTA
      </Styled(Button)>
    </Styled(Col)>
    <Styled(Col)
      className="CreditCardForm__submit"
      colSize={
        Object {
          "large": 3,
          "medium": 3,
          "small": 4,
        }
      }
      offsetLeft={
        Object {
          "small": 1,
        }
      }
    >
      <Styled(Button)
        buttonVariation="fixed-width"
        data-locator="payment-addcardbtn"
        fill="BLUE"
        type="submit"
      >
        lbl_common_addCTA
      </Styled(Button)>
    </Styled(Col)>
  </Styled(Row)>
</form>
`;
